# azure-market-insights-elt

./: .env  .gitignore  __azurite_db_blob__.json  __azurite_db_blob_extent__.json  main.py  pyproject.toml
__blobstorage__/: AzuriteConfig
docs/: .$GLOBAL ARCHITECTURE PLAN.drawio.bkp  GLOBAL ARCHITECTURE PLAN.drawio
src/: handle_auth.py
src/secrets/: __init__.py  project_credentials.py  project_environment.py
src/utils/: log_messages.py
